fix(jetson): Force ALSA direct audio output to bypass broken PulseAudio
CRITICAL AUDIO FIX:
- Astra agent TTS now uses direct ALSA output (aplay -D plughw:0,0)
- Bypasses PulseAudio daemon that refuses to start on Jetson
- Hardware confirmed working: USB2.0 Device (card 0, device 0)
- More reliable for embedded systems: fewer layers, no daemon dependencies
- Added comprehensive troubleshooting guide (JETSON_AUDIO_OUTPUT_FIX.md)

LEX DEPLOYMENT:
- Complete Jetson installer (install_lex_jetson.sh)
- .deb package builder scripts (build_lex_deb.sh, build_deb_on_jetson.sh)
- Comprehensive deployment documentation (LEX_PACKAGE_README.md)
- Pre-start hardware checks (lex_pre_start_checks.sh)
- Auto-start service installer (install_lex_autostart.sh)

BADGE READER:
- Active greeting trigger implemented
- Automatic greeting when badge detected
- Extracts first name for natural greetings

--- a/config/astra_vein_receptionist.json5
+++ b/config/astra_vein_receptionist.json5
@@ -40,7 +40,7 @@
       type: "FaceEmotionCapture",
       config: {
         camera_index: 0,
-        poll_interval: 10.0,  // SPEED OPTIMIZED: Check every 10s (was 30s) = more responsive
+        poll_interval: 45.0,  // SPEED OPTIMIZED: Check every 10s (was 30s) = more responsive
         timeout: 5            // SPEED OPTIMIZED: 5s timeout (was 10s) = faster processing
       }
     }
@@ -92,7 +92,7 @@
         
         "output_dir": "audio_output",
         "sample_rate": 22050,
-        "play_command": null,           // null = auto-detect (afplay on macOS, aplay on Linux)
+        "play_command": "aplay -D plughw:0,0",  // ✅ JETSON FIX: Direct ALSA to USB speaker (card 0, device 0)
         "working_dir": null,             // null = auto-detect
         "speaker_id": 0,
   "length_scale": 0.90,  // SPEED OPTIMIZED: 0.90 (was 0.80) = faster speech
