fix(lex): Match AstraVein service config for working audio
- Added all environment variables (DISPLAY, DBUS, PULSE_SERVER, XDG_RUNTIME_DIR)
- Added 10 second startup delay for hardware initialization
- Changed to network-online.target for better network readiness
- Full path in ExecStart command
- Same robust configuration as working AstraVein service

--- a/lex_agent.service
+++ b/lex_agent.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Lex Channel Chief Agent - AI Sales Agent for Lexful
 Documentation=https://github.com/feraco/roboai-espeak
-After=network.target sound.target ollama.service
-Wants=ollama.service
+After=network-online.target ollama.service sound.target
+Wants=network-online.target ollama.service
 
 [Service]
 Type=simple
@@ -10,24 +10,30 @@ User=unitree
 Group=unitree
 WorkingDirectory=/home/unitree/roboai-espeak
 Environment="PATH=/home/unitree/.local/bin:/usr/local/bin:/usr/bin:/bin"
+Environment="DISPLAY=:0"
+Environment="XAUTHORITY=/home/unitree/.Xauthority"
+Environment="DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus"
+Environment="PULSE_SERVER=unix:/run/user/1000/pulse/native"
+Environment="XDG_RUNTIME_DIR=/run/user/1000"
 Environment="SKIP_AUDIO_VALIDATION=true"
-Environment="PYTHONUNBUFFERED=1"
 
-# Audio setup before starting
-ExecStartPre=/usr/bin/amixer -c 0 set Speaker unmute
-ExecStartPre=/usr/bin/amixer -c 0 set Speaker 100%
+# Wait for system to be fully ready
+ExecStartPre=/bin/sleep 10
 
-# Pre-start hardware and service validation
+# Run comprehensive pre-start checks (waits for hardware, validates Ollama)
 ExecStartPre=/bin/bash /home/unitree/roboai-espeak/lex_pre_start_checks.sh
 
-# Start the Lex agent
-ExecStart=/home/unitree/.local/bin/uv run src/run.py lex_channel_chief
+# Clear stale audio configs (force re-detection)
+ExecStartPre=/bin/bash -c "cd /home/unitree/roboai-espeak && rm -f device_config.yaml"
 
-# Restart configuration
+# Start agent
+ExecStart=/home/unitree/.local/bin/uv run /home/unitree/roboai-espeak/src/run.py lex_channel_chief
+
+# Restart on failure (with delay to avoid rapid restart loops)
 Restart=on-failure
 RestartSec=15
+StartLimitInterval=300
 StartLimitBurst=3
-StartLimitIntervalSec=300
 
 # Logging
 StandardOutput=journal
