--- a/config/lex_channel_chief.json5
+++ b/config/lex_channel_chief.json5
@@ -52,7 +52,7 @@
       base_url: "http://localhost:11434",
       model: "llama3.1:8b",
       temperature: 0.7,
-      timeout: 30,  // Increased timeout for first response
+      timeout: 15,  // Increased timeout for first response
       history_length: 5,
       repeat_penalty: 1.3,
       frequency_penalty: 0.5,
@@ -64,26 +64,26 @@
   },
   agent_actions: [
     {
-      name: "speak",
-      llm_label: "speak",
-      type: "Action",
-      implementation: "passthrough",
-      connector: "piper_tts",
-      config: {
-        model_en: "en_US-ryan-medium",
-        output_dir: "audio_output",
-        sample_rate: 22050,
-        play_command: "aplay -D plughw:0,0",  // ✅ JETSON FIX: Direct ALSA to USB speaker (card 0, device 0)
-        working_dir: null,
-        speaker_id: 0,
-        length_scale: 0.90,  // SPEED OPTIMIZED: 0.90 = faster speech
-        noise_scale: 0.55,   // Brighter, more cheerful voice
-        noise_w: 0.8,
-        piper_command: "piper",
-        clear_on_speak: false,
-        mock: false,
-        log_sentences: true,
-        emotion: "confident"
+      "name": "speak",
+      "llm_label": "speak",
+      "type": "Action",
+      "implementation": "passthrough",
+      "connector": "piper_tts",
+      "config": {
+        "model_en": "en_US-ryan-medium",
+        "output_dir": "audio_output",
+        "sample_rate": 22050,
+        "play_command": "aplay -D plughw:0,0",  // ✅ JETSON FIX: Direct ALSA to USB speaker (card 0, device 0)
+        "working_dir": null,
+        "speaker_id": 0,
+        "length_scale": 0.90,  // SPEED OPTIMIZED: 0.90 = faster speech
+        "noise_scale": 0.55,   // Brighter, more cheerful voice
+        "noise_w": 0.8,
+        "piper_command": "piper",
+        "clear_on_speak": false,
+        "mock": false,
+        "log_sentences": true,
+        "emotion": "confident"
       }
     }
   ],
