feat: Add system-wide hardware configuration service for boot
- Auto-detects and configures USB audio devices on every boot
- Creates /etc/asound.conf with correct default devices
- Sets speaker/mic volumes and permissions
- Configures camera permissions
- Runs BEFORE agent services start
- Creates /etc/roboai-devices.conf for reference
- Install with: sudo bash scripts/installers/install_hardware_setup.sh

--- a/systemd_services/astra_agent_robust.service
+++ b/systemd_services/astra_agent_robust.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Astra Vein Receptionist AI Agent with Hardware Detection
-After=network-online.target ollama.service sound.target
-Wants=network-online.target ollama.service
+After=network-online.target ollama.service sound.target roboai-hardware-setup.service
+Wants=network-online.target ollama.service roboai-hardware-setup.service
 
 [Service]
 Type=simple
