--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "deepface>=0.0.95",
     "tf-keras>=2.20.1",
     "pytesseract>=0.3.13",
+    "easyocr>=1.7.2",
 ]
 
 [dependency-groups]
