--- a/config/lex_channel_chief.json5
+++ b/config/lex_channel_chief.json5
@@ -33,15 +33,16 @@
       }
     },
     {
-      type: "BadgeReaderOCR",
+      type: "BadgeReaderEasyOCR",
       config: {
-        camera_index: 0,
+        camera_index: 3,
         poll_interval: 8.0,
         greeting_cooldown: 90.0,
-        buffer_size: 5,
-        confidence_threshold: 0.5,
-        preprocess_quality: "medium",
-        descriptor: "Badge/Name Tag Scanner"
+        min_confidence: 0.75,
+        use_realsense: true,
+        realsense_width: 1920,
+        realsense_height: 1080,
+        realsense_fps: 30
       }
     }
   ],
