Add memory management to badge reader - forget people after time
FEATURE: Badge reader now forgets people after max_memory_time

MEMORY MANAGEMENT:
- New config: max_memory_time (default: 300s = 5 minutes)
- Added _cleanup_old_detections() method
- Runs on every badge processing cycle
- Removes people not seen within max_memory_time
- Logs when person is forgotten

BEHAVIOR:
- greeting_cooldown (90s): Don't re-greet within this window
- max_memory_time (300s): Completely forget after this time
- After forgotten, person will be greeted again as if new

USE CASES:
- Conference booth: Person returns 10 minutes later → re-greeted
- All-day event: Person walks by multiple times → friendly each time
- Multi-visit scenarios: Each visit after 5 min gets fresh greeting

CONFIG UPDATES:
- lex_channel_chief.json5: Added max_memory_time: 300.0
- Documented in setup guide with examples
- Explained cooldown vs memory distinction

LOGS:
- Shows: 🧹 Forgot [Name] (not seen for 300s)
- Helps track memory cleanup in production

This ensures robot introduces itself to every new person and re-introduces after time passes, creating fresh interactions throughout the day.

--- a/config/lex_channel_chief.json5
+++ b/config/lex_channel_chief.json5
@@ -37,7 +37,8 @@
       config: {
         camera_index: 3,
         poll_interval: 8.0,
-        greeting_cooldown: 90.0,
+        greeting_cooldown: 90.0,       // Don't re-greet same person for 90 seconds
+        max_memory_time: 300.0,        // Forget person after 5 minutes (300s)
         min_confidence: 0.75,
         use_realsense: true,
         realsense_width: 1920,
