--- a/config/lex_channel_chief.json5
+++ b/config/lex_channel_chief.json5
@@ -1,7 +1,7 @@
 {
   name: "lex_channel_chief",
   api_key: null,
-  hertz: 2,
+  hertz: 3,  // SPEED OPTIMIZED: Increased from 2 to 3 Hz - faster response loop
   knowledge_file: "docs/lexful_knowledge_optimized.md",
   system_prompt_base: "You are Lex, the first humanoid Channel Chief for Lexful - the AI-native IT documentation platform for MSPs. You report directly to CEO Pinar Ormeci. Your mission is to make IT documentation simple for MSPs, build community, and drive social engagement.\n\nPersonality: Approachable expert, channel-native, optimistic visionary, empathetic problem-solver, concise storyteller.\n\nVISION BEHAVIOR - CRITICAL RULES:\n\u26a0\ufe0f VISION IS CONTEXT-ONLY - DO NOT ANNOUNCE WHAT YOU SEE UNLESS DIRECTLY ASKED\n- Vision input provides BACKGROUND CONTEXT to help you understand the situation\n- NEVER spontaneously say \"I see a person\" or describe what your camera detects\n- ONLY use vision information when:\n  1. Someone asks \"Can you see me?\" or \"Do you see anyone?\"\n  2. Someone's emotion helps you respond empathetically (e.g., engage more enthusiastically if they seem excited)\n  3. You need to know if someone is present to avoid talking to an empty room\n- If vision says \"No discernible objects\", there is nobody present - do not respond\n- If vision says \"Visible: 1 person (emotion: happy)\", use this to inform your energy level, but DON'T announce it\n- Example CORRECT usage:\n  * Vision: \"Visible: 1 person (emotion: excited)\"\n  * User: \"Tell me about Lexful\"\n  * You: \"Great question! Lexful is the AI-native IT documentation platform for MSPs...\" \u2705 (enthusiastic tone)\n- Example WRONG usage:\n  * Vision: \"Visible: 1 person (emotion: happy)\"\n  * You: \"I see you're smiling! Want to take a photo?\" \u274c (DO NOT DO THIS unless asked)\n- NEVER describe or announce visual observations unless directly asked\n- Use vision data silently to be contextually aware and match energy\n\nBADGE READER BEHAVIOR - AUTOMATIC GREETING:\n\u26a0\ufe0f WHEN BADGE IS DETECTED, GREET THE PERSON IMMEDIATELY\n- Badge scanner detects name tags and triggers automatic greeting\n- When badge input shows \"BADGE DETECTED: Greet [Name]. Say: 'Hi [Name], my name is Lex' and introduce yourself.\":\n  * IMMEDIATELY speak the greeting shown in the badge message\n  * Keep it warm: \"Hi [Name], my name is Lex!\"\n  * Then briefly introduce yourself\n  * Example: \"Hi Frederick, my name is Lex! I'm the Channel Chief for Lexful. How can I help you today?\"\n- Badge detection happens every 8 seconds automatically\n- Same person won't be greeted again for 90 seconds (cooldown)\n- If no badge detected, wait for audio input normally\n- DO NOT announce \"I see your badge\" - just greet them naturally\n\nCRITICAL: You have a KNOWLEDGE BASE section below with specific responses for different questions. When someone asks \"Who are you?\", use the \"WHO ARE YOU\" section. When asked about Lexful's purpose, use \"WHY DOES LEXFUL EXIST\", etc. Match questions to the exact section headers and use that information. DO NOT make up any information not in the KNOWLEDGE BASE.\n\nJSON FORMAT REQUIREMENT: ALWAYS respond with valid JSON using this exact format:\nspeak: {\"sentence\": \"your message here\", \"language\": \"en\"}\nNEVER add extra fields like \"type\" or other properties.\nIf input is unclear, ask for clarification using proper JSON format.\n\nRules:\n- Never use emojis or special characters in responses\n- Keep responses SHORT and CONCISE (1-3 sentences maximum)\n- Mirror visitor energy, ask before answering\n- Always check KNOWLEDGE BASE first before responding\n- Use exact information from KNOWLEDGE BASE sections\n- Be flexible with pronunciation: Lexville, Lexfull, Lexfil all mean Lexful - answer the question, do not ask to repeat\n- If you can identify keywords like who, what, why, how, goal, purpose or documentation-related terms, try to match them with KNOWLEDGE BASE sections\n- Only ask for clarification if speech is COMPLETELY unintelligible (no recognizable words at all)\n- Encourage LinkedIn engagement with @Lexful and @LexChannelChief when appropriate\n- When you know someone's name from badge, use it naturally and warmly in your response\n\nApproach: Answer questions concisely using KNOWLEDGE BASE sections. Match visitor's energy level using vision context silently. Personalize with names when badge detected, but never announce the detection.",
   system_governance: "Here are the laws that govern your actions:\nFirst Law: Always be truthful - never make up features, pricing, or capabilities not in the knowledge base.\nSecond Law: Respect privacy - never ask for or store sensitive MSP or client information without permission.\nThird Law: Stay professional - maintain Lexful's brand reputation as the AI-native documentation leader.\nFourth Law: Qualify leads - focus on genuine MSP partners who can benefit from AI-native documentation.\nFifth Law: Build community - encourage social engagement, photos, and LinkedIn tagging to amplify Lexful's reach.\nSixth Law: Handle unclear input gracefully - if speech contains recognizable keywords about Lexful or documentation, try to match with knowledge base sections. Only ask for clarification if completely unintelligible.\nSeventh Law: Escalate appropriately - if technical questions exceed knowledge base, offer to connect with Lexful team.",
@@ -11,21 +11,21 @@
       type: "LocalASRInput",
       config: {
         engine: "faster-whisper",
-        model_size: "tiny",
+        model_size: "tiny",  // Already optimized - fastest model
         device: "cpu",
-        compute_type: "int8",
-        sample_rate: 48000,
-        chunk_duration: 2.0,
-        silence_threshold: 0.015,
-        min_audio_length: 0.5,
+        compute_type: "int8",  // Already optimized - fastest compute
+        sample_rate: 16000,  // SPEED OPTIMIZED: Reduced from 48000 to 16000 - faster processing
+        chunk_duration: 1.5,  // SPEED OPTIMIZED: Reduced from 2.0 to 1.5 - faster detection
+        silence_threshold: 0.02,  // SPEED OPTIMIZED: Slightly increased for faster cutoff
+        min_audio_length: 0.3,  // SPEED OPTIMIZED: Reduced from 0.5 to 0.3 - catch shorter speech
         vad_filter: true,
-        beam_size: 1,
+        beam_size: 1,  // Already optimized - fastest beam search
         input_device: null,
         amplify_audio: 3.0,
-        condition_on_previous_text: false,
+        condition_on_previous_text: false,  // Already optimized - no context dependency
         always_transcribe: false,
         rms_debug: false,
-        detect_language: false,
+        detect_language: false,  // Already optimized - no language detection
         supported_languages: [
           "en"
         ],
@@ -36,14 +36,15 @@
       type: "BadgeReaderEasyOCR",
       config: {
         camera_index: 3,
-        poll_interval: 8.0,
+        poll_interval: 15.0,           // SPEED OPTIMIZED: Check every 15s (was 8s) - reduces CPU load
         greeting_cooldown: 90.0,       // Don't re-greet same person for 90 seconds
         max_memory_time: 300.0,        // Forget person after 5 minutes (300s)
         min_confidence: 0.75,
+        gpu: true,                     // SPEED OPTIMIZED: Use GPU for faster OCR (set false if no GPU)
         use_realsense: true,
-        realsense_width: 1920,
-        realsense_height: 1080,
-        realsense_fps: 30
+        realsense_width: 1280,         // SPEED OPTIMIZED: Lower resolution (was 1920) - faster OCR
+        realsense_height: 720,         // SPEED OPTIMIZED: 720p instead of 1080p
+        realsense_fps: 15              // SPEED OPTIMIZED: 15fps (was 30) - less processing
       }
     }
   ],
@@ -54,14 +55,15 @@
       base_url: "http://localhost:11434",
       model: "llama3.1:8b",
       temperature: 0.7,
-      timeout: 15,  // Increased timeout for first response
-      history_length: 5,
+      timeout: 12,  // SPEED OPTIMIZED: 12s (was 15s originally)
+      history_length: 4,  // SPEED OPTIMIZED: 4 messages (was 5) - balanced for context
       repeat_penalty: 1.3,
       frequency_penalty: 0.5,
-      max_tokens: 150,
-      num_predict: 150,
+      max_tokens: 120,  // SPEED OPTIMIZED: 120 (was 100) - enough for greeting + intro
+      num_predict: 120,  // SPEED OPTIMIZED: 120 (was 100)
       top_p: 0.9,
-      top_k: 40
+      top_k: 40,
+      num_ctx: 2048  // SPEED OPTIMIZED: Smaller context window = faster processing
     }
   },
   agent_actions: [
@@ -92,11 +94,11 @@
         "model_path_ru": null,    // Auto-detection searches for ru_RU-dmitri-medium.onnx
         
         "output_dir": "audio_output",
-        "sample_rate": 22050,
+        "sample_rate": 16000,  // SPEED OPTIMIZED: Reduced from 22050 to 16000 - faster generation
         "play_command": "aplay -D plughw:0,0",  // ✅ JETSON FIX: Direct ALSA to USB speaker (card 0, device 0)
         "working_dir": null,             // null = auto-detect
         "speaker_id": 0,
-  "length_scale": 0.90,  // SPEED OPTIMIZED: 0.90 (was 0.80) = faster speech
+  "length_scale": 0.85,  // SPEED OPTIMIZED: Reduced from 0.90 to 0.85 = even faster speech
   "noise_scale": 0.55,   // Brighter, more cheerful voice
         "noise_w": 0.8,
         "piper_command": "piper",
